# RoboCup

./: README.md  hello.cpp  main.cpp  pub_goal.py
src/detect/: 12_best.pkl  detect_circle.py  drop.py  old_detect.py  params.pkl
src/offb/: CMakeLists.txt  package.xml
src/offb/config/: waypoint_list.yaml
src/offb/launch/: base.launch  mission.launch  tf.launch
src/offb/src/: offboard_node.cpp  t265_to_mavros.cpp  tf.cpp
src/ros_navigation/: robocup.pgm  robocup.yaml
src/ros_navigation/launch/: map_server.launch  move_base.launch  nav_px4.launch
src/ros_navigation/param/: blank_map.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  map.pgm  move_base_params.yaml  robocup.pgm  robocup.yaml
src/ros_navigation/rviz/: ros_navigation.rviz
src/slam/: CMakeLists.txt  package.xml
src/slam/launch/: map_server.launch  mrobot_playbag.launch  mrobot_slam.launch
src/slam/rviz/: mrobot_playbag.rviz  mrobot_slam.rviz
