<?xml version="1.0"?>
<package>
  <name>mrobot_slam</name>
  <version>0.1.6</version>
  <description>
    The mrobot_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache License 2.0</license>
  <author email="rosclub@modinge.com">Ray</author>
  <author email="rosclub@modinge.com">dajianli</author>
  <maintainer email="rosclub@modinge.com">Ray</maintainer>
  <url type="bugtracker">http://www.rosclub.com/ROSClub/mrobot/issues</url>
  <url type="repository">http://www.rosclub.com/ROSClub/mrobot</url>
  <url type="website">http://www.rosclub.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <run_depend>mrobot_bringup</run_depend> -->
  <run_depend>gmapping</run_depend>
</package>
